css/index/main.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html, body {
    font-size: 62.5%;
    font-family: 'Source Sans Pro', sans-serif;
    scroll-behavior: smooth;
    background-color:  rgb(27, 28, 36);
    transition: all .5s;
    -webkit-transition: all .5s;
    -moz-transition: all .5s;
    -o-transition: all .5s;
    overflow-x: hidden;
}

a {
    text-decoration: none;
    color: #ccc;
}

header {
    background-color: transparent; 
    transition: all .5s;
    -webkit-transition: all .5s;
    -moz-transition: all .5s;
    -o-transition: all .5s;
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 10;
    height: 12rem;
}

.header__container--1 {
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    width: 100%;
    height: 12rem;
}

.header__container--1 img {
    width: 60%;
    height: auto;
    margin-left: 2rem;
    flex: 1 1 30.2rem;
}

.sidebar__button {
    content: '';
    display: inline-block;
    background: transparent url("../../images/menu__icon.svg") no-repeat;
    background-size: contain;
    height: 5rem;
    width: 5rem;
    flex: 0 0 5rem;
    margin-right: 2.5rem;
}

.hide__sidebar{
    width: 0;
    height: 100%;
    z-index: 30;
    position: fixed;
    z-index: 31;
    left: 0;
    top: 0;
    background-color: rgb(27, 28, 36);
    overflow-x: hidden;
    overflow-y: auto;
    transition: all .5s;
    -webkit-transition: all .5s;
    -moz-transition: all .5s;
    -o-transition: all .5s;
}

.sidebar__logo--container {
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
    position: static;
    width: 100%;
    height: 12rem;
}

.sidebar__logo--container img {
    width: 60%;
    height: auto;
    margin-left: 2rem;
    flex: 1 1 30.2rem;
}

.sidebar__button--close {
    content: '';
    background: transparent url("../../images/menu__icon--close.svg") no-repeat;
    background-size: contain;
    display: none;
    height: 5rem;
    width: 5rem;
    flex: 0 0 5rem;
    margin-right: 2.5rem;
}

.sidebar__input--container {
    margin: auto auto;
    margin-top: 2rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
    width:85%;
}

.sidebar__input--container::after {
    content: '';
    display: inline-block;
    position: absolute;
    background: transparent url("../../images/lupa.svg") no-repeat;
    background-size: contain;
    height: 2rem;
    width: 2rem;
    top: 1rem;
    right: 1.2rem;
}

.sidebar__input--container input {
    width: 100%;
    height: 4.2rem;
    border-radius: 2.5rem;
    outline: none;
    border: .1px solid white;
    padding: 1rem 4rem 1rem 2rem;
    background-color: transparent;
    color: #FFFFFF;
}

.sidebar__input--container input::placeholder {
    color: rgba(255, 255, 255, 0.6);
}

.sidebar__input--container div {
    margin-top: 2rem;
    text-align: center;
    width: 100%;
    display: flex;
    justify-content: center;
    font-size: 1.4rem;
}


.sidebar__input--container button {
    display: inline-block;
    width: 12rem;
    height: 4rem;
    border: 1px solid transparent;
    outline: none;
    border-radius: 2.5rem;
}

#login__button {
    margin-right: 1.5rem;
    background-color: #FFFFFF
}

#sing__up--button{
    background-color: #d498e8;
    color: #FFFFFF;
}

.sidebar__menu {
    margin: 3rem;
}

.sidebar__menu ul {
    list-style: none;
}

.nav__menu--anchor{
    color: #FFFFFF;
    font-size: 1.6rem;
    text-decoration: none;
}

#home--anchor {
    display: inline-block;
    margin-bottom: 1.5rem;
}

hr {
    border: 0;
    height: .1px;
    background: #ccc;
}

#film--anchor {
    display: inline-block;
    margin-top: 1.5rem;
    position: relative;
}

#film--anchor::after {
    content: '';
    display: inline-block;
    position: absolute;
    background: transparent url("../../images/down__arrow.svg") no-repeat;
    background-size: contain;
    height: 1.5rem;
    width: 1.5rem;
    top: .5rem;
    right: -2rem;
}

.film__nav {
    padding: 1.5rem;
    padding-left: 2rem;
    font-size: 1.3rem;
    color: #ccc;
    columns: 2;
    margin-bottom: 1.5rem;
    padding-bottom: 0;
}

.film__nav li{
    padding: .5rem;
}

#movies--anchor {
    display: inline-block;
    margin-top: 1.5rem;
    position: relative;
}

#movies--anchor::after{
    content: '';
    display: inline-block;
    position: absolute;
    background: transparent url("../../images/down__arrow.svg") no-repeat;
    background-size: contain;
    height: 1.5rem;
    width: 1.5rem;
    top: .5rem;
    right: -2rem;
}

.movies__nav {
    padding: 1.5rem;
    padding-left: 2rem;
    font-size: 1.3rem;
    color: #ccc;
    columns: 2;
    margin-bottom: 1.5rem;
    padding-bottom: 0;
}

.movies__nav li {
    padding: .5rem;
}

#show--anchor {
    display: inline-block;
    margin-top: 1.5rem;
}

.main {
    width: 100%;
    height: 100vh;
    max-height: 70.4rem;
    padding-top: 1rem;
    /* fallback */
    background-image: url("../../images/spongebob__tiny.jpg"); 
    background-image: linear-gradient(to bottom, rgba(27, 28, 36, 1) 0%, rgba(27, 28, 36, .8) 15%, rgba(27,28,36, .3), rgba(27, 28, 36, .7) 85%,rgba(27, 28, 36, 8) 100%), url(../../images/spongebob__tiny.jpg);
    background-position: center bottom;
    background-repeat: no-repeat;
    background-size: cover;
}

.main__container {
    display: flex;
    flex-wrap: wrap;
    width: calc(85%);
    margin-top: 16rem;
    margin-left: 2rem;
    max-width: calc(85%);
    height: auto;
    align-items: flex-start;
}

.main__container h1 {
    font-size: 3rem;
    font-weight: 800;
    color: white;
    flex: 1 1 auto;
}

#content--type {
    background-color: #ffd40d;
    color: black;
    border-radius: 1rem;
    font-size: 1.4rem;
    padding: .3rem;
    flex: 1 1 auto;
}

.main__container span {
    font-size: 1.6rem;
    font-weight: 600;
    color: #d8b207;
    margin-top: 1.2rem;
    flex: 1 1 auto;
}

.main__container span small {
    color: #EEE;
    font-size: 1.5rem;
    margin-left: 1.6rem;
    flex-shrink: 1;
    flex: 1 1 auto;
}

.main__container p {
    color: #EEEEEE;
    font-size: 1.8rem;
    margin-top: 1.5rem;
    width: 280rem;
    max-width: 280rem;
    height: 16rem;
    overflow: scroll;
    white-space: normal;
    text-overflow: ellipsis;
    flex: 1 1 auto;
}

.main__container button {
    display: inline-block;
    width: 15rem;
    height: 4rem;
    border: 1px solid transparent;
    outline: none;
    border-radius: 2.5rem;
    margin-top: 2.5rem;
    background-color:  #8dcaff;
    color: white;
    font-weight: 600;
    font-size: 1.4rem;
    box-shadow: 0px 1.5px 0px 0px #FFFFFF;
    position: relative;
    padding-left: 2rem;
    flex: .1 1 auto;
}

.main__container button::after {
    content: "";
    display: inline-block;
    position: absolute;
    background: transparent url("../../images/play.svg") no-repeat;
    background-size: contain;
    height: 2rem;
    width: 2rem;
    line-height: 3;
    top: 1rem;
    left: 1.5rem;
}

.main__container button:active {
    transform: translateY(5px);
}

.movies__menu--container{
    width: 100vw;
    margin-top: 2rem;
}

.movies__menu--tittles {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    box-shadow: 0px -1px 1px 1px #FFFFFF;
}

.movies__menu--tittles h2 {
    color: white;
    font-size: 3.2rem;
    padding: 2rem;
    padding-right: .2rem;
}

.movies__menu--tittles span {
    font-size: 1rem;
    font-weight: 600;
    flex: 0 1 auto;
    border-radius: .8rem;
    padding: .5rem;
    margin-left: .5rem;
    margin-top: .5rem;
    background: #ffd40d;
    color: black;
    box-shadow: 0px 1.5px 0px 0px #FFFFFF;
}

.movies__menu--allmovies {
    display: flex;
    flex-direction: row;
    width: 100vw;
}

.movies__menu--column1 {
    display: flex;
    flex-direction: column;
    width: 50%;
}

.movies__menu--column2 {
    display: flex;
    flex-direction: column;
    width: 50%;
}
.movies__menu--allmovies figure {
    width: 15.5rem;
    height: 25.5rem;
    margin: 2rem auto;
}

.movies__menu--allmovies figure img {
    width: 15.5rem;
    height: 22rem;
    object-fit: cover;
    object-position: top;
    border-radius: .5rem;
}

.movies__menu--allmovies figcaption{
    font-size: 1.4rem;
    font-weight: 600;
    padding-top: .8rem;
    color: #EEEEEE;
    text-align: center;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

